--- a/index.html
+++ b/index.html
@@ -25,14 +25,20 @@
     <header class="header">
       <div class="header-container container">
         <a class="header-logo link" href="./index.html">
-          <img
+          <!-- <img
             class="header-logo-img"
             src="./images/header/logo.svg"
             alt="Logo"
             width="76"
             height="76"
-          />
+          /> -->
+          <!-- Sprite svg -->
+          <svg class="header-logo-img" width="76" height="76"> 
+            <use href="./images/icons.svg#logo">
+            </use>
+          </svg>
         </a>
+
         <nav class="header-nav">
           <ul class="header-nav-list list">
             <li class="header-nav-item">
@@ -60,36 +66,40 @@
     <!-- Main-->
     <main>
       <!-- Hero section-->
-      <section class="hero section">
-        <div class="container">
-          <ul class="list">
-            <li>
-              <a
-                class="link media-links"
-                href="https://Instagram.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Instagram</a
-              >
-            </li>
-            <li>
-              <a
-                class="link media-links"
-                href="https://Youtube.com"
-                target="_blank"
-                rel="noopener noreferrer"
-                >Youtube</a
-              >
-            </li>
-          </ul>
-          <p class="uppertitle-light">A hair salon for men in Kyiv</p>
-          <h1 class="main-title">Barber Shop</h1>
-          <p class="main-text main-text-light">
-            We are experts in trendy men's haircuts. We work quickly, carefully
-            and with style.
-          </p>
+      <section class="hero">
+        <div class="hero-container container">
+          <div class="hero-leftside">
+            <ul class="media list">
+              <li>
+                <a
+                  class="link media-links"
+                  href="https://Instagram.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Instagram</a
+                >
+              </li>
+              <li>
+                <a
+                  class="link media-links"
+                  href="https://Youtube.com"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >Youtube</a
+                >
+              </li>
+            </ul>
+          </div>
+          <div class="hero-rightside">
+            <p class="uppertitle uppertitle-light">A hair salon for men in Kyiv</p>
+            <h1 class="hero-title">Barber Shop</h1>
+            <p class="main-text hero-text main-text-light">
+              We are experts in trendy men's haircuts. We work quickly, carefully
+              and with style.
+            </p>
+          </div>
           <!--Slider controls-->
-          <ul class="list">
+          <ul class="hero-controls list">
             <li><button type="button">Back</button></li>
             <li><button type="button">Forward</button></li>
           </ul>
@@ -137,7 +147,7 @@
         </div>
       </section>
       <!-- Services and prices section-->
-      <section class="prices section">
+      <section class="price section">
         <div class="container">
           <p class="uppertitle uppertitle-light">
             Spend your time with the best masters
@@ -145,41 +155,41 @@
           <h2 id="services-and-prices" class="title title-light">
             Services and Prices
           </h2>
-          <ul class="prices-list list">
-            <li>
+          <ul class="price-list list">
+            <li class="price-item">
               <ul class="price-inner-list list">
                 <li class="main-text main-text-light price-inner-item">
-                  Men's haircut from 300 uah.
+                  <span class="price-inner-service">Men's haircut</span> from 300 uah.
                 </li>
                 <li class="main-text main-text-light price-inner-item">
-                  Beard trim from 300 uah.
+                  <span class="price-inner-service">Beard trim</span> from 300 uah.
                 </li>
                 <li class="main-text main-text-light price-inner-item">
-                  Mushtache trim from 200 uah.
+                  <span class="price-inner-service">Mushtache trim</span> from 200 uah.
                 </li>
                 <li class="main-text main-text-light price-inner-item">
-                  Straight razor shave from 200 uah.
+                  <span class="price-inner-service">Straight razor shave</span> from 200 uah.
                 </li>
-              </ul>
+              <span class="price-inner-service"></ul></span>
             </li>
-            <li>
+            <li class="price-item">
               <ul class="price-inner-list list">
                 <li class="main-text main-text-light price-inner-item">
-                  Trainee's haircut from 50 uah.
+                  <span class="price-inner-service">Trainee's haircut</span> from 50 uah.
                 </li>
                 <li class="main-text main-text-light price-inner-item">
-                  Haircut under the nozzle from 200 uah.
+                  <span class="price-inner-service">Haircut under the nozzle</span> from 200 uah.
                 </li>
                 <li class="main-text main-text-light price-inner-item">
-                  Children's haircut (0-12 y.o.) from 300 uah.
+                  <span class="price-inner-service">Children's haircut (0-12 y.o.)</span> from 300 uah.
                 </li>
                 <li class="main-text main-text-light price-inner-item">
-                  Camouflage of grey hair from 200 uah.
+                  <span class="price-inner-service">Camouflage of grey hair</span> from 200 uah.
                 </li>
               </ul>
             </li>
           </ul>
-          <button class="btn prices-btn" type="button">Online booking</button>
+          <button class="btn price-btn" type="button">Online booking</button>
         </div>
       </section>
       <!-- Benefits section-->
@@ -192,7 +202,7 @@
             </li>
             <li class="benefits-item">
               <p class="benefits-value">50<sup class="benefits-sup">+</sup></p>
-              <p class="benefits-text">wards for excellent service</p>
+              <p class="benefits-text">Awards for excellent service</p>
             </li>
             <li class="benefits-item">
               <p class="benefits-value">20<sup class="benefits-sup">+</sup></p>
@@ -225,8 +235,16 @@
                 width="370"
                 hegith="346"
               />
-              <h3 class="barbers-name">John Smith</h3>
-              <p class="barbers-extreme">Extreme Barber</p>
+              <div class="team-wrapper">
+                <h3 class="barbers-name">John Smith</h3>
+                <p class="barbers-extreme">Extreme Barber</p>
+              <ul class="media list">
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#instagram"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#twitter"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#facebook"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Linkedin"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#linkedin"></use></svg></a></li>
+              </ul>
+              </div>
             </li>
             <li class="team-item card-set-item">
               <img
@@ -235,8 +253,16 @@
                 width="370"
                 hegith="346"
               />
-              <h3 class="barbers-name">Michele Doe</h3>
-              <p class="barbers-extreme">Extreme Barber</p>
+              <div class="team-wrapper">
+                <h3 class="barbers-name">Michele Doe</h3>
+                <p class="barbers-extreme">Extreme Barber</p>
+              <ul class="media list">
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#instagram"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#twitter"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#facebook"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Linkedin"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#linkedin"></use></svg></a></li>
+              </ul>
+              </div>
             </li>
             <li class="team-item card-set-item">
               <img
@@ -245,8 +271,16 @@
                 width="370"
                 hegith="346"
               />
-              <h3 class="barbers-name">Alan Black</h3>
-              <p class="barbers-extreme">Extreme Barber</p>
+              <div class="team-wrapper">
+                <h3 class="barbers-name">Alan Black</h3>
+                <p class="barbers-extreme">Extreme Barber</p>
+               <ul class="media list">
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#instagram"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#twitter"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#facebook"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Linkedin"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#linkedin"></use></svg></a></li>
+              </ul>
+              </div>
             </li>
           </ul>
         </div>
@@ -292,7 +326,7 @@
           </ul>
         </div>
       </section>
-      <div class="page-wrap">
+      <div class="page-wrapper">
         <!-- Booking section-->
         <section class="section booking-section">
           <div class="">
@@ -303,20 +337,22 @@
         <section class="contacts section">
           <div class="">
             <h2 id="contacts" class="title title-light">Contacts</h2>
-            <address>
+            <address class="contacts-details">
               <a
                 class="link contacts-adress"
                 href="https://goo.gl/maps/2Lu11rghbmuY24UQ8?coh=178571&entry=tt"
                 target="_blank"
                 rel="noopener norefferer"
-                >st. Vasylkivska, 7A <br />
+                ><svg class="contacts-icon" width="24px" height="24px"><use href="./images/icons.svg#map-pin"></use></svg>
+                st. Vasylkivska, 7A <br />
                 Kyiv, 08132 <br
               /></a>
-              <a class="link contacts-info" href="tel:+380441111111"
-                >+38 044 111 11 11</a
+              <a class="link contacts-link" href="tel:+380441111111"
+                ><svg class="contacts-icon" width="24px" height="24px"><use href="./images/icons.svg#phone"></use></svg>+38 044 111 11 11</a
               >
-              <a class="link contacts-info" href="mailto:barbershop@email.com"
-                >barbershop@email.com</a
+              <a class="link contacts-link" href="mailto:barbershop@email.com"
+                ><svg class="contacts-icon" width="24px" height="24px"><use href="./images/icons.svg#mail"></use></svg>
+                barbershop@email.com</a
               >
             </address>
             <h3 class="uppertitle uppertitle-light">Working hours</h3>
