--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </li>
             <li class="header-nav-item">
               <a class="header-nav-link link" href="#services-and-prices"
-                >Serivces and prices</a
+                >Services and prices</a
               >
             </li>
             <li class="header-nav-item">
