--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
             </li>
             <li class="header-nav-item">
               <a class="header-nav-link link" href="#services-and-prices"
-                >Seriv
-ices and prices</a
+                >Services and prices</a
               >
             </li>
             <li class="header-nav-item">
@@ -393,5 +392,15 @@ ices and prices</a
         </ul>
       </div>
     </footer>
+     <!-- Modal Window -->
+    <div class="backdrop">
+      <div class="modal">
+        <button class="modal-close-btn">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#"></use>
+          </svg>
+        </button>
+      </div>
+    </div>
   </body>
 </html>
