--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           /> -->
           <!-- Sprite svg -->
           <svg class="header-logo-img" width="76" height="76"> 
-            <use href="./images/icons.svg#logo">
+            <use href="./icons.svg#logo">
             </use>
           </svg>
         </a>
@@ -223,62 +223,76 @@
       </section>
       <!-- Barbers section-->
       <section class="barbers-section section">
-        <!--add the insta and other logos-->
         <div class="container">
           <p class="uppertitle">For true enjoyers of the atmosphere</p>
           <h2 id="barbers" class="title barbers">Our barbers</h2>
           <ul class="team-list card-set list">
             <li class="team-item card-set-item">
-              <img
-                src="./images/team/img-4.jpg"
-                alt="John Smith"
-                width="370"
-                hegith="346"
-              />
+              <div class="team-image">
+                <img
+                  src="./images/team/img-4.jpg"
+                  alt="John Smith"
+                  width="370"
+                  hegith="346"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+              </div>
               <div class="team-wrapper">
                 <h3 class="barbers-name">John Smith</h3>
                 <p class="barbers-extreme">Extreme Barber</p>
               <ul class="media list">
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#instagram"></use></svg></a></li>
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#twitter"></use></svg></a></li>
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#facebook"></use></svg></a></li>
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Linkedin"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#linkedin"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#instagram"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#twitter"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#facebook"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Linkedin"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#linkedin"></use></svg></a></li>
               </ul>
               </div>
             </li>
             <li class="team-item card-set-item">
-              <img
-                src="./images/team/img-5.jpg"
-                alt="Michele Doe"
-                width="370"
-                hegith="346"
-              />
+              <div class="team-image">
+                <img
+                  src="./images/team/img-5.jpg"
+                  alt="Michele Doe"
+                  width="370"
+                  hegith="346"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+              </div>
               <div class="team-wrapper">
                 <h3 class="barbers-name">Michele Doe</h3>
                 <p class="barbers-extreme">Extreme Barber</p>
               <ul class="media list">
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#instagram"></use></svg></a></li>
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#twitter"></use></svg></a></li>
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#facebook"></use></svg></a></li>
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Linkedin"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#linkedin"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#instagram"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#twitter"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#facebook"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Linkedin"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#linkedin"></use></svg></a></li>
               </ul>
               </div>
             </li>
             <li class="team-item card-set-item">
-              <img
-                src="./images/team/img-6.jpg"
-                alt="Alan Black"
-                width="370"
-                hegith="346"
-              />
+              <div class="team-image">
+                <img
+                  src="./images/team/img-6.jpg"
+                  alt="Alan Black"
+                  width="370"
+                  hegith="346"
+                />
+                <div class="overlay">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
+              </div>
               <div class="team-wrapper">
                 <h3 class="barbers-name">Alan Black</h3>
                 <p class="barbers-extreme">Extreme Barber</p>
                <ul class="media list">
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#instagram"></use></svg></a></li>
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#twitter"></use></svg></a></li>
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#facebook"></use></svg></a></li>
-                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Linkedin"><svg class="media-icon" width="20" height="20"> <use href="./images/icons.svg#linkedin"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Instagram"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#instagram"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Twitter"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#twitter"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Facebook"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#facebook"></use></svg></a></li>
+                <li class="media-item"><a class="media-link link" href="" target="_blank" rel="noopener noreferrer" aria-label="Linkedin"><svg class="media-icon" width="20" height="20"> <use href="./icons.svg#linkedin"></use></svg></a></li>
               </ul>
               </div>
             </li>
@@ -343,15 +357,15 @@
                 href="https://goo.gl/maps/2Lu11rghbmuY24UQ8?coh=178571&entry=tt"
                 target="_blank"
                 rel="noopener norefferer"
-                ><svg class="contacts-icon" width="24px" height="24px"><use href="./images/icons.svg#map-pin"></use></svg>
+                ><svg class="contacts-icon" width="24px" height="24px"><use href="./icons.svg#map-pin"></use></svg>
                 st. Vasylkivska, 7A <br />
                 Kyiv, 08132 <br
               /></a>
               <a class="link contacts-link" href="tel:+380441111111"
-                ><svg class="contacts-icon" width="24px" height="24px"><use href="./images/icons.svg#phone"></use></svg>+38 044 111 11 11</a
+                ><svg class="contacts-icon" width="24px" height="24px"><use href="./icons.svg#phone"></use></svg>+38 044 111 11 11</a
               >
               <a class="link contacts-link" href="mailto:barbershop@email.com"
-                ><svg class="contacts-icon" width="24px" height="24px"><use href="./images/icons.svg#mail"></use></svg>
+                ><svg class="contacts-icon" width="24px" height="24px"><use href="./icons.svg#mail"></use></svg>
                 barbershop@email.com</a
               >
             </address>
@@ -397,7 +411,7 @@
       <div class="modal">
         <button class="modal-close-btn">
           <svg class="modal-close-icon" width="8" height="8">
-            <use href="./images/icons.svg#"></use>
+            <use href="./icons.svg#close"></use>
           </svg>
         </button>
       </div>
