--- a/index.html
+++ b/index.html
@@ -337,16 +337,20 @@
       <div class="page-wrapper">
         <!-- Booking section -->
          <section class="section booking-section">
-          <div class="">
-            <h2 class="title title-light" id="online-booking">Online-booking</h2>
+          <h2 class="title title-light" id="online-booking">Online-booking</h2>
+          <div class="booking-form-wrapper">
             <form class="booking-form" name="booking_form" autocomplete="on">
               <div class="booking-form-wrapper">
-                <label class="booking-form-field"><input class="booking-form-input" type="text" name="user_name"><span class="booking-form-tag">Name*</span></label>
-                <label class="booking-form-field"><input class="booking-form-input" type="tel" name="user_input"><span class="booking-form-tag">Phone*</span></label>
+                <label class="booking-form-field"><input class="booking-form-input" type="text" name="user_name" required minlength="3" placeholder="&nbsp;"><span class="booking-form-tag">Name*</span> <svg class="booking-form-icon" width="20" height="20">
+                  <use href="./icons.svg#circle-info"></use>
+                </svg></label>
+                <label class="booking-form-field"><input class="booking-form-input" type="tel" name="user_input" required minlength="12" maxlength="12" placeholder="&nbsp;"><span class="booking-form-tag">Phone*</span><svg class="booking-form-icon" width="20" height="20">
+                  <use href="./icons.svg#circle-info"></use>
+                </svg></label>
               </div>
-              <label> <textarea name="user-message"  rows="6" placeholder="Type your message..."
+              <label class="booking-form-field"> <textarea class="booking-form-message" name="user-message"  rows="6" placeholder="Type your message..."
                 ></textarea><span class="booking-form-tag">Message</span></label>
-              <button class="btn btn-white" type="submit">Send</button>
+              <button class="booking-form-btn btn btn-white" type="submit">Send</button>
             </form>
           </div>
         </section>
@@ -450,12 +454,16 @@
         </form>
       </div>
     </div>
+    <!--     Mask for input -->
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.0/dist/jquery.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/inputmask@5.0.8/dist/jquery.inputmask.min.js"></script>
+
     <!-- AOS -->
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./js/animation-on-scroll.js"></script>
-  
     <script src="./js/header.js"></script>
     <script src="./js/modal.js"></script>
+     <script src="./js/inputmask.js"></script>
     <script src="./js/form.js"></script>
   </body>
 </html>
